fixed fonts and skills and bio spacing

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,8 @@ nav{
 }
 .bio1{
     font-size: 2rem;
-    
+    padding-right: 10%;
+    padding-left: 10%;
 }
 #linkedinbutton{
     height: 50px;
@@ -54,20 +55,21 @@ nav{
     box-shadow: 2px 2px, 10px;
 }
 .Skills{
-font-size: 5rem;
+font-size: 3rem;
 text-align: center;
-text-decoration: underline;
+/* text-decoration: underline; */
 padding: 0;
 margin: 35px;
 margin-bottom: 70px;
+margin-top: 90px;
 /* border: 0; */
 
 }
 .Skills-Listed{
 text-align: center;
 font-size: 2rem;
-padding-right: 15px;
-padding-left: 15px;
+padding-right: 8%;
+padding-left: 8%;
 
 }
 html{
